--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,112 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
-
+    <header class="header">
+      <nav class="navigation">
+        <a class="logo navigation__logo">
+          <img class="logo__icon" src="http://placehold.it/150x100" width="33" height="40" alt="Логотип">
+          <img class="logo__name" src="http://placehold.it/150x100" width="101" height="18" alt="Кэт энерджи">
+        </a>
+        <button class="navigation__toggle" type="button"></button>
+        <ul class="navigation__list">
+          <li class="navigation__item navigation__item--active">
+            <a class="navigation__link">Главная</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main">
+      <h1 class="main__title">Функциональное питание для котов</h1>
+      <section class="basic">
+        <p class="basic__slogan">Занялся собой? Займись котом!</p>
+        <img class="basic__image" src="http://placehold.it/150x100" width="280" height="270" alt="Кэт энерджи Курица">
+      </section>
+      <section class="programs">
+        <h2 class="visually-hidden">Подобор программы</h2>
+        <a class="button" href="#">Подобрать программу</a>
+        <ul class="programs__list">
+          <li class="programs__item">
+            <h3 class="programs__title">Похудение</h3>
+            <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="programs__link" href="#">Каталог Slim</a>
+          </li>
+          <li class="programs__item">
+            <h3 class="programs__title">Набор массы</h3>
+            <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="programs__link" href="#">Каталог pro</a>
+          </li>
+        </ul>
+      </section>
+      <section class="function">
+        <h2 class="function__title title">Как это работает</h2>
+        <ul class="function__list">
+          <li class="function__item">Функциональное питание содержит только полезные питательные вещества.</li>
+          <li class="function__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+          <li class="function__item">Замените один-два приема обычной еды на наше функциональное питание.</li>
+          <li class="function__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+        </ul>
+      </section>
+      <section class="illustration">
+        <h2 class="illustration__title title">Живой пример</h2>
+        <p class="illustration__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+        <div class="illustration__wrapper">
+          <div class="count illustration__count">
+            <b class="count__title">5 кг</b>
+            <span class="count__text">снижение веса</span>
+          </div>
+          <div class="count illustration__count">
+            <b class="count__title">60 дней</b>
+            <span class="count__text">затрачено времени</span>
+          </div>
+          <span class="illustration__expenses">Затраты на питание: 15 000 руб.</span>
+        </div>
+        <div class="slider illustration__slider">
+          <input class="slider__input slider__input--before" id="slider-before" type="radio" name="slider" checked>
+          <input class="slider__input slider__input--after" id="slider-after" type="radio" name="slider">
+          <div class="slider__image-wrap">
+            <img class="slider__image" src="http://placehold.it/150x100" width="311" height="232" alt="Было">
+          </div>
+          <p class="slider__control">
+            <label class="slider__text" for="slider-before">Было
+              <span class="slider__button slider__button--before"></span>
+            </label>
+            <label class="slider__text" for="slider-after">Стало
+              <span class="slider__button slider__button--after"></span>
+            </label>
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <section class="contacts footer__contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <p class="contacts__title">приглашаем к сотрудничеству дилеров!</p>
+        <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </section>
+      <section class="map footer__map">
+        <h2 class="visually-hidden">Карта</h2>
+      </section>
+      <section class="social footer__social">
+        <h2 class="visually-hidden">Соцсети</h2>
+        <div class="social__logo">
+          <img class="logo__icon" src="http://placehold.it/150x100" width="128" height="24" alt="Логотип">
+        </div>
+        <ul class="social__list">
+          <li class="social__item"><a class="social__link" href="">Вконтакте</a></li>
+          <li class="social__item"><a class="social__link" href="">Инстаграм</a></li>
+          <li class="social__item"><a class="social__link" href="">Фейсбук</a></li>
+        </ul>
+      </section>
+      <a class="copyright footer__copyright" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="copyright__text">HTML Academy</span>
+        <img class="copyright__logo" src="http://placehold.it/150x100" width="27" height="34" alt="Копирайт">
+      </a>
+    </footer>
   </body>
 </html>
