--- a/source/index.html
+++ b/source/index.html
@@ -26,8 +26,8 @@
       </nav>
     </header>
     <main class="main">
-      <h1 class="main__title">Функциональное питание для котов</h1>
       <section class="basic">
+        <h1 class="basick__title main__title">Функциональное питание для котов</h1>
         <p class="basic__slogan">Занялся собой? Займись котом!</p>
         <img class="basic__image" src="http://placehold.it/150x100" width="280" height="270" alt="Кэт энерджи Курица">
       </section>
@@ -86,21 +86,21 @@
           </p>
         </div>
       </section>
-    </main>
-    <footer class="footer">
-      <section class="contacts footer__contacts">
+      <section class="contacts">
         <h2 class="visually-hidden">Контакты</h2>
         <p class="contacts__title">приглашаем к сотрудничеству дилеров!</p>
         <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </section>
-      <section class="map footer__map">
+      <section class="map">
         <h2 class="visually-hidden">Карта</h2>
       </section>
+    </main>
+    <footer class="footer">
+      <div class="logo footer__logo">
+        <img class="logo__icon" src="http://placehold.it/150x100" width="128" height="24" alt="Логотип">
+      </div>
       <section class="social footer__social">
         <h2 class="visually-hidden">Соцсети</h2>
-        <div class="social__logo">
-          <img class="logo__icon" src="http://placehold.it/150x100" width="128" height="24" alt="Логотип">
-        </div>
         <ul class="social__list">
           <li class="social__item"><a class="social__link" href="">Вконтакте</a></li>
           <li class="social__item"><a class="social__link" href="">Инстаграм</a></li>
