--- a/source/catalog.html
+++ b/source/catalog.html
@@ -27,7 +27,7 @@
     </header>
     <main class="main">
       <section class="catalog">
-        <h1 class="catalog__title main__title">Каталог продукции</h1>
+        <h1 class="main__title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item">
             <a class="catalog__image" href="#">
