--- a/source/index.html
+++ b/source/index.html
@@ -27,7 +27,7 @@
     </header>
     <main class="main">
       <section class="basic">
-        <h1 class="basick__title main__title">Функциональное питание для котов</h1>
+        <h1 class="basic__title main__title">Функциональное питание для котов</h1>
         <p class="basic__slogan">Занялся собой? Займись котом!</p>
         <img class="basic__image" src="http://placehold.it/150x100" width="280" height="270" alt="Кэт энерджи Курица">
       </section>
