--- a/source/catalog.html
+++ b/source/catalog.html
@@ -27,14 +27,14 @@
     </header>
     <main class="main">
       <section class="catalog">
-        <h1 class="main__title">Каталог продукции</h1>
+        <h1 class="catalog__title title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item">
             <a class="catalog__image" href="#">
               <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy PRO 500 г">
             </a>
             <div class="catalog__info">
-              <h2 class="catalog__title"><a href="#">Cat Energy PRO 500 г</a></h2>
+              <h2 class="catalog__product"><a href="#">Cat Energy PRO 500 г</a></h2>
               <table class="table catalog__table">
                 <tr class="table__row">
                   <td class="table__cell">Объем</td>
@@ -57,7 +57,7 @@
               <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy PRO 1000 г">
             </a>
             <div class="catalog__info">
-              <h2 class="catalog__title"><a href="#">Cat Energy PRO 1000 г</a></h2>
+              <h2 class="catalog__product"><a href="#">Cat Energy PRO 1000 г</a></h2>
               <table class="table catalog__table">
                 <tr class="table__row">
                   <td class="table__cell">Объем</td>
@@ -80,7 +80,7 @@
               <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy PRO 500 г">
             </a>
             <div class="catalog__info">
-              <h2 class="catalog__title"><a href="#">Cat Energy PRO 500 г</a></h2>
+              <h2 class="catalog__product"><a href="#">Cat Energy PRO 500 г</a></h2>
               <table class="table catalog__table">
                 <tr class="table__row">
                   <td class="table__cell">Объем</td>
@@ -103,7 +103,7 @@
               <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy PRO 1000 г">
             </a>
             <div class="catalog__info">
-              <h2 class="catalog__title"><a href="#">Cat Energy PRO 1000 г</a></h2>
+              <h2 class="catalog__product"><a href="#">Cat Energy PRO 1000 г</a></h2>
               <table class="table catalog__table">
                 <tr class="table__row">
                   <td class="table__cell">Объем</td>
@@ -126,7 +126,7 @@
               <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy SLIM 500 г">
             </a>
             <div class="catalog__info">
-              <h2 class="catalog__title"><a href="#">Cat Energy SLIM 500 г</a></h2>
+              <h2 class="catalog__product"><a href="#">Cat Energy SLIM 500 г</a></h2>
               <table class="table catalog__table">
                 <tr class="table__row">
                   <td class="table__cell">Объем</td>
@@ -149,7 +149,7 @@
               <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy SLIM 1000 г">
             </a>
             <div class="catalog__info">
-              <h2 class="catalog__title"><a href="#">Cat Energy SLIM 1000 г</a></h2>
+              <h2 class="catalog__product"><a href="#">Cat Energy SLIM 1000 г</a></h2>
               <table class="table catalog__table">
                 <tr class="table__row">
                   <td class="table__cell">Объем</td>
@@ -172,7 +172,7 @@
               <img src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy SLIM 500 г">
             </a>
             <div class="catalog__info">
-              <h2 class="catalog__title"><a href="#">Cat Energy SLIM 500 г</a></h2>
+              <h2 class="catalog__product"><a href="#">Cat Energy SLIM 500 г</a></h2>
               <table class="table catalog__table">
                 <tr class="table__row">
                   <td class="table__cell">Объем</td>
@@ -191,7 +191,7 @@
             <a class="button" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <h2 class="catalog__title"><a href="#">Показать еще 100500 товаров</a></h2>
+            <h2 class="catalog__product"><a href="#">Показать еще 100500 товаров</a></h2>
             <p class="catalog__text catalog__text--small">На самом деле вкусов гораздо больше!</p>
             <a class="button button--grey" href="#">Показать все</a>
           </li>
@@ -199,25 +199,25 @@
         <h3 class="additional-products">Дополнительные товары</h3>
         <ul class="catalog__list">
           <li class="catalog__item">
-            <h2 class="catalog__title"><a href="#">Сахарозаменитель</a></h2>
+            <h2 class="catalog__product"><a href="#">Сахарозаменитель</a></h2>
             <span class="catalog__text">1 упаковка (100 г)</span>
             <span class="catalog__text">100 Р.</span>
             <a class="button" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <h2 class="catalog__title"><a href="#">Питьевая вода</a></h2>
+            <h2 class="catalog__product"><a href="#">Питьевая вода</a></h2>
             <span class="catalog__text">5 литров</span>
             <span class="catalog__text">50 Р.</span>
             <a class="button" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <h2 class="catalog__title"><a href="#">Молоко</a></h2>
+            <h2 class="catalog__product"><a href="#">Молоко</a></h2>
             <span class="catalog__text">1 литр</span>
             <span class="catalog__text">100 Р.</span>
             <a class="button" href="#">Заказать</a>
           </li>
           <li class="catalog__item">
-            <h2 class="catalog__title"><a href="#">Витамины</a></h2>
+            <h2 class="catalog__product"><a href="#">Витамины</a></h2>
             <span class="catalog__text">1 упаковка (30 г)</span>
             <span class="catalog__text">300 Р.</span>
             <a class="button" href="#">Заказать</a>
