--- a/source/form.html
+++ b/source/form.html
@@ -27,7 +27,7 @@
     </header>
     <main class="main">
       <form class="form main__form" action="https://echo.htmlacademy.ru" method="post">
-        <h1 class="form__title main__title">Подбор программы</h1>
+        <h1 class="form__title title">Подбор программы</h1>
         <p class="form__text">Заполните анкету и мы подберем программу питания для вашего кота</p>
         <div class="form__wrapper">
           <label class="form__label">Имя:*
