--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,7 +51,7 @@
                   </tr>
                 </table>
               </div>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
               <a class="catalog__image" href="#">
@@ -74,7 +74,7 @@
                   </tr>
                 </table>
               </div>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
               <a class="catalog__image" href="#">
@@ -97,7 +97,7 @@
                   </tr>
                 </table>
               </div>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
               <a class="catalog__image" href="#">
@@ -120,7 +120,7 @@
                   </tr>
                 </table>
               </div>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
               <a class="catalog__image" href="#">
@@ -143,7 +143,7 @@
                   </tr>
                 </table>
               </div>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
               <a class="catalog__image" href="#">
@@ -166,7 +166,7 @@
                   </tr>
                 </table>
               </div>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
               <a class="catalog__image" href="#">
@@ -189,7 +189,7 @@
                   </tr>
                 </table>
               </div>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
               <h2 class="catalog__product"><a href="#">Показать еще 100500 товаров</a></h2>
@@ -197,31 +197,31 @@
               <a class="button button--grey" href="#">Показать все</a>
             </li>
           </ul>
-          <h3 class="catalog__additional title-stripe">Дополнительные товары</h3>
+          <h3 class="catalog__additional title title--stripe">Дополнительные товары</h3>
           <ul class="catalog__list">
             <li class="catalog__item">
               <h2 class="catalog__product"><a href="#">Сахарозаменитель</a></h2>
               <span class="catalog__text">1 упаковка (100 г)</span>
               <span class="catalog__text">100 Р.</span>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
               <h2 class="catalog__product"><a href="#">Питьевая вода</a></h2>
               <span class="catalog__text">5 литров</span>
               <span class="catalog__text">50 Р.</span>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
               <h2 class="catalog__product"><a href="#">Молоко</a></h2>
               <span class="catalog__text">1 литр</span>
               <span class="catalog__text">100 Р.</span>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__button" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
               <h2 class="catalog__product"><a href="#">Витамины</a></h2>
               <span class="catalog__text">1 упаковка (30 г)</span>
               <span class="catalog__text">300 Р.</span>
-              <a class="button" href="#">Заказать</a>
+              <a class="button catalog__button" href="#">Заказать</a>
             </li>
           </ul>
           <div class="catalog__bonus">
