--- a/source/form.html
+++ b/source/form.html
@@ -61,20 +61,20 @@
           </li>
         </ul>
         <div class="form__wrapper main__wrapper">
-          <h2 class="form__title title-stripe">Контактные данные (владельца кота)</h2>
+          <h2 class="form__title title title--stripe">Контактные данные (владельца кота)</h2>
           <label class="form__label">E-mail:*
             <input class="form__input" type="email" name="email" placeholder="kuklachev@gmail.com" required>
           </label>
           <label class="form__label">Телефон:*
             <input class="form__input" type="tel" name="phone" placeholder="8 (960) 900-60-90" required>
           </label>
-          <h2 class="form__title title-stripe">Комментарий</h2>
+          <h2 class="form__title title title--stripe">Комментарий</h2>
           <label class="form__label">
             <textarea class="form__textarea" name="text" placeholder="Расскажите обо всех повадках кота"></textarea>
           </label>
         </div>
         <ul class="form__list">
-          <h2 class="form__title title-stripe">Дополнительно</h2>
+          <h2 class="form__title title title--stripe">Дополнительно</h2>
           <li class="form__item">
             <label class="form__label">
               <input class="visually-hidden" type="checkbox" name="sweetener" checked>
