--- a/source/index_.html
+++ b/source/index_.html
@@ -60,37 +60,37 @@
             <li class="function__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
           </ul>
         </section>
-        <section class="illustration">
-          <div class="illustration__wrapper">
-            <h2 class="illustration__title title">Живой пример</h2>
-            <p class="illustration__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-            <div class="count illustration__count">
-              <b class="count__title">5 кг</b>
-              <span class="count__text">снижение веса</span>
-            </div>
-            <div class="count illustration__count">
-              <b class="count__title">60 дней</b>
-              <span class="count__text">затрачено времени</span>
-            </div>
-            <span class="illustration__expenses">Затраты на питание: 15 000 руб.</span>
-          </div>
-          <div class="slider illustration__slider">
-            <input class="visually-hidden slider__input slider__input--before" id="slider-before" type="radio" name="slider" checked>
-            <input class="visually-hidden slider__input slider__input--after" id="slider-after" type="radio" name="slider">
-            <div class="slider__image-wrap">
-              <img class="slider__image" src="img/before-mobile@1x.png" width="311" height="232" alt="Было">
-            </div>
-            <p class="slider__control">
-              <label class="slider__text" for="slider-before">Было
-                <span class="slider__button slider__button--before"></span>
-              </label>
-              <label class="slider__text" for="slider-after">Стало
-                <span class="slider__button slider__button--after"></span>
-              </label>
-            </p>
-          </div>
-        </section>
       </div>
+      <section class="illustration">
+        <div class="illustration__wrapper main__wrapper">
+          <h2 class="illustration__title title">Живой пример</h2>
+          <p class="illustration__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+          <div class="count illustration__count">
+            <b class="count__title">5 кг</b>
+            <span class="count__text">снижение веса</span>
+          </div>
+          <div class="count illustration__count">
+            <b class="count__title">60 дней</b>
+            <span class="count__text">затрачено времени</span>
+          </div>
+          <span class="illustration__expenses">Затраты на питание: 15 000 руб.</span>
+        </div>
+        <div class="slider illustration__slider main__wrapper">
+          <input class="visually-hidden slider__input slider__input--before" id="slider-before" type="radio" name="slider" checked>
+          <input class="visually-hidden slider__input slider__input--after" id="slider-after" type="radio" name="slider">
+          <div class="slider__image-wrap">
+            <img class="slider__image" src="img/before-mobile@1x.png" width="311" height="232" alt="Было">
+          </div>
+          <p class="slider__control">
+            <label class="slider__text" for="slider-before">Было
+              <span class="slider__button slider__button--before"></span>
+            </label>
+            <label class="slider__text" for="slider-after">Стало
+              <span class="slider__button slider__button--after"></span>
+            </label>
+          </p>
+        </div>
+      </section>
       <section class="contacts main__wrapper">
         <h2 class="visually-hidden">Контакты</h2>
         <p class="contacts__title">приглашаем к сотрудничеству дилеров!</p>
