Создает адаптивную сетку основных блоков

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <nav class="navigation main__wrapper">
+      <nav class="navigation wrapper">
         <a class="navigation__logo">
           <img class="navigation__icon" src="img/logo-mobile.svg" width="191" height="40" alt="Логотип">
         </a>
@@ -27,7 +27,7 @@
       </nav>
     </header>
     <main class="main">
-      <div class="main__wrapper">
+      <div class="wrapper">
         <section class="catalog">
           <h1 class="catalog__title title">Каталог продукции</h1>
           <ul class="catalog__list">
@@ -234,7 +234,7 @@
           </div>
         </section>
       </div>
-      <section class="contacts main__wrapper">
+      <section class="contacts wrapper">
         <h2 class="visually-hidden">Контакты</h2>
         <p class="contacts__title">приглашаем к сотрудничеству дилеров!</p>
         <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
@@ -243,7 +243,7 @@
         <h2 class="visually-hidden">Карта</h2>
       </section>
     </main>
-    <footer class="footer main__wrapper">
+    <footer class="footer wrapper">
       <div class="footer__logo">
         <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="Логотип">
       </div>
