--- a/source/index.html
+++ b/source/index.html
@@ -9,12 +9,12 @@
   <body>
     <header class="header">
       <div class="header__navigation">
-        <nav class="navigation main__wrapper">
+        <nav class="navigation wrapper">
           <a class="navigation__logo">
             <img class="navigation__icon" src="img/logo-mobile.svg" width="191" height="40" alt="Логотип">
           </a>
           <button class="navigation__toggle" type="button"></button>
-          <ul class="navigation__list">
+          <ul class="navigation__list navigation__list--white">
             <li class="navigation__item navigation__item--active">
               <a class="navigation__link">Главная</a>
             </li>
@@ -26,8 +26,8 @@
             </li>
           </ul>
         </nav>
-        <section class="basic main__wrapper">
-          <h1 class="basic__title title">Функциональное питание для котов</h1>
+        <section class="basic wrapper">
+          <h1 class="title basic__title">Функциональное питание для котов</h1>
           <p class="basic__slogan">Занялся собой? Займись котом!</p>
           <img class="basic__image" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Кэт энерджи Курица">
           <a class="button basic__button" href="#">Подобрать программу</a>
@@ -35,7 +35,7 @@
       </div>
     </header>
     <main class="main">
-      <div class="main__wrapper">
+      <div class="wrapper">
         <section class="programs">
           <h2 class="visually-hidden">Подобор программы</h2>
           <ul class="programs__list">
@@ -91,7 +91,7 @@
           </div>
         </section>
       </div>
-      <section class="contacts main__wrapper">
+      <section class="contacts wrapper">
         <h2 class="visually-hidden">Контакты</h2>
         <p class="contacts__title">приглашаем к сотрудничеству дилеров!</p>
         <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
@@ -100,7 +100,7 @@
         <h2 class="visually-hidden">Карта</h2>
       </section>
     </main>
-    <footer class="footer main__wrapper">
+    <footer class="footer wrapper">
       <div class="footer__logo">
         <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="Логотип">
       </div>
