--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,8 @@
           <a class="navigation__logo">
             <img class="navigation__icon" src="img/logo-mobile.svg" width="191" height="40" alt="Логотип">
           </a>
-          <button class="navigation__toggle" type="button"></button>
-          <ul class="navigation__list navigation__list--white">
+          <ul class="navigation__list navigation__list--white navigation__list--opened">
+            <button class="navigation__toggle" type="button"></button>
             <li class="navigation__item">
               <a class="navigation__link">Главная</a>
             </li>
